Fixed overlap bug cards

--- a/static/sass/_alignments.scss
+++ b/static/sass/_alignments.scss
@@ -1,3 +1,7 @@
 .margin-right-5 {
 	margin-right: 5px;
 }
+
+.show-on-mobile {
+	margin-right: 5px;
+}
